@@ -9,7 +9,7 @@ package org.dita.dost.writer;
 
 import static org.dita.dost.util.Constants.*;
 
-import java.util.*;
+import java.util.List;
 import org.dita.dost.util.DitaClass;
 import org.w3c.dom.Document;
 import org.w3c.dom.Element;
@@ -19,36 +19,42 @@ import org.w3c.dom.Element;
  */
 public final class DitaMetaWriter extends AbstractDitaMetaWriter {
 
-  private static final List<DitaClass> titlealtsPosition = Collections.unmodifiableList(
-    Collections.singletonList(TOPIC_TITLE)
+  private static final List<DitaClass> titlealtsPosition = List.of(TOPIC_TITLE);
+  private static final List<DitaClass> titlealtsOrder = List.of(TOPIC_NAVTITLE, MAP_SEARCHTITLE, TOPIC_SEARCHTITLE);
+  private static final List<DitaClass> prologPosition = List.of(
+    TOPIC_TITLE,
+    TOPIC_TITLEALTS,
+    TOPIC_SHORTDESC,
+    TOPIC_ABSTRACT
   );
-  private static final List<DitaClass> titlealtsOrder = Collections.unmodifiableList(
-    Arrays.asList(TOPIC_NAVTITLE, MAP_SEARCHTITLE, TOPIC_SEARCHTITLE)
+  private static final List<DitaClass> prologOrder = List.of(
+    TOPIC_AUTHOR,
+    TOPIC_SOURCE,
+    TOPIC_PUBLISHER,
+    TOPIC_COPYRIGHT,
+    TOPIC_CRITDATES,
+    TOPIC_PERMISSIONS,
+    TOPIC_METADATA,
+    TOPIC_RESOURCEID,
+    TOPIC_DATA,
+    TOPIC_DATA_ABOUT,
+    TOPIC_FOREIGN,
+    TOPIC_UNKNOWN
   );
-  private static final List<DitaClass> prologPosition = Collections.unmodifiableList(
-    Arrays.asList(TOPIC_TITLE, TOPIC_TITLEALTS, TOPIC_SHORTDESC, TOPIC_ABSTRACT)
+  private static final List<DitaClass> metadataPosition = List.of(
+    TOPIC_AUTHOR,
+    TOPIC_SOURCE,
+    TOPIC_PUBLISHER,
+    TOPIC_COPYRIGHT,
+    TOPIC_CRITDATES,
+    TOPIC_PERMISSIONS
   );
-  private static final List<DitaClass> prologOrder = Collections.unmodifiableList(
-    Arrays.asList(
-      TOPIC_AUTHOR,
-      TOPIC_SOURCE,
-      TOPIC_PUBLISHER,
-      TOPIC_COPYRIGHT,
-      TOPIC_CRITDATES,
-      TOPIC_PERMISSIONS,
-      TOPIC_METADATA,
-      TOPIC_RESOURCEID,
-      TOPIC_DATA,
-      TOPIC_DATA_ABOUT,
-      TOPIC_FOREIGN,
-      TOPIC_UNKNOWN
-    )
-  );
-  private static final List<DitaClass> metadataPosition = Collections.unmodifiableList(
-    Arrays.asList(TOPIC_AUTHOR, TOPIC_SOURCE, TOPIC_PUBLISHER, TOPIC_COPYRIGHT, TOPIC_CRITDATES, TOPIC_PERMISSIONS)
-  );
-  private static final List<DitaClass> metadataOrder = Collections.unmodifiableList(
-    Arrays.asList(TOPIC_AUDIENCE, TOPIC_CATEGORY, TOPIC_KEYWORDS, TOPIC_PRODINFO, TOPIC_OTHERMETA)
+  private static final List<DitaClass> metadataOrder = List.of(
+    TOPIC_AUDIENCE,
+    TOPIC_CATEGORY,
+    TOPIC_KEYWORDS,
+    TOPIC_PRODINFO,
+    TOPIC_OTHERMETA
   );
 
   public Document process(final Document doc) {
